src/main/java/com/example/demo/model/error/InternalErrorException.java
package com.example.demo.model.error;


public class InternalErrorException extends RuntimeException {
    public InternalErrorException(String message) {
        super(message);
    }
}
